--- a/templates/tagapp/view.html
+++ b/templates/tagapp/view.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% block title %}{{ tag.name }}{% endblock %}
 {% block content %}
-<div id="tag_view">
+<div class="rank span11">
     <ul>{% for paste in pastes %}
-        <li><a href="{{ url_for('pasteapp.view', paste_id=paste.id) }}">{{ paste.title }} @ {{ paste.created_time | dateformat }} </a></li>
+        <li><a href="{{ url_for('pasteapp.view', paste_id=paste.id) }}">{{ paste.title }}</a>{% for tag in paste.tags %}<a href="{{ url_for('tagapp.view', tag_name=tag.name) }}" class="btn small tag">{{ tag.name }}</a>{% endfor %}<span>{{ paste.created_time | dateformat }}<span></li>
         {% endfor %}</ul>
 </div>
 {% endblock %}
