--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -122,6 +122,7 @@ div#top ul li a:visited {
 /** side bar **/
 #sidebar {
     padding-top: 30px;
+    float:left;
 }
 
 /** content **/
@@ -134,6 +135,7 @@ div#top ul li a:visited {
 }
 #wrapper {
 	margin-left:40px;
+    float:left;
 }
 
 /** new paste page **/
