--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <title>{% block title %}{% endblock %} - DavidPaste.com</title>
+        <link rel="shortcut icon" href="/static/images/favicon.ico" />
         <link rel="stylesheet" type="text/css" media="screen" href="/static/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" media="screen" href="/static/css/styles.css">
         <link rel="stylesheet" type="text/css" media="all" href="/static/css/themes/monokai.css">
