--- a/templates/pasteapp/view.html
+++ b/templates/pasteapp/view.html
@@ -2,7 +2,7 @@
 {% block title %}{{ model.title }}{% endblock %}
 {% block content %}
 <div id="paste_view">
-    <h1>{{ model.title }}<span>{{ model.created_time | dateformat }}</span></h1>
+    <h1>{% if model in user.favourites %}<img src="/static/images/star_on.png" class="star" _id="{{ model.id }}" />{% else %}<img src="/static/images/star_off.png" class="star" _id="{{ model.id }}" />{% endif %}{{ model.title }}<span>{{ model.created_time | dateformat }}</span></h1>
     <h3>{% for tag in model.tags %}<a href="/tag/{{ tag.name }}" class="btn small tag">{{ tag.name }}</a>{% endfor %}</h3>
     <h4><a href="{{ url_for('pasteapp.view', paste_id=model.id) }}?output=image&attachment=true" class="btn" style="margin-bottom:5px;">保存成png图片</a></h4>
     <h4><script type="text/javascript" charset="utf-8">
