--- a/templates/pasteapp/create.html
+++ b/templates/pasteapp/create.html
@@ -15,7 +15,7 @@
 		<p><label class="span2"></label><span class="help-block">可以不填</span></p>
 		<p>{{ form.syntax.label(class="span2") }}{{ form.syntax(class="span8") }}</p>
 		<p>{{ form.tag.label(class="span2") }}{{ form.tag(class="span8") }}</p>
-		<p><label class="span2"></label><span class="help-block">多个标签用空格区分</span></p>
+		<p><label class="span2"></label><span class="help-block">多个标签用空格区分, 最多可以写3个</span></p>
 		<p>{{ form.content }}</p>
         <p>{{ form.captcha.label(class="span2") }}{{ form.captcha(class="span2") }}<img src="/captcha?t={{ t }}" style="position: absolute;margin-left: 10px;" /></p>
         <p><label class="span2"></label><span class="help-block">不区分大小写</span></p>
