--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -26,9 +26,9 @@ a.tag {
 }
 
 .star {
-	width:20px;
+	width:17px;
 	cursor:pointer;
-	margin-right:2px;
+	margin-right:5px;
 }
 /** form **/
 .form p {
@@ -185,6 +185,7 @@ div#top ul li a:visited {
 #paste_view h1 {
 	font-size:25px;
 	font-family:'Heiti';
+    height:25px;
 }
 #paste_view h1 span {
 	font-size:14px;
@@ -194,7 +195,8 @@ div#top ul li a:visited {
 
 #paste_view h4 {
     font-size: 16px;
-    margin-left: 30px;
+    margin:10px 0;
+    height:32px;
 }
 #paste_view h4 a:link,
 #paste_view h4 a:visited {
@@ -202,9 +204,12 @@ div#top ul li a:visited {
 }
 #code_view {
     width:680px;
+    clear:both;
 }
 #code_view .linenodiv {
-    margin-right:10px;
+    border-right:2px solid #555;
+    background:none repeat scroll 0 0 #272822;
+    padding:0 5px 0 7px;
 }
 #code_view .source {
     overflow:auto;
@@ -212,6 +217,8 @@ div#top ul li a:visited {
 }
 #code_view pre {
 	padding-left:5px;
+    margin:0;
+    color:white;
 }
 .sourcetable td,
 .sourcetable th {
