--- a/templates/userapp/view.html
+++ b/templates/userapp/view.html
@@ -1,30 +1,18 @@
 {% extends 'base.html' %}
-{% block title %}排行榜{% endblock %}
+{% block title %}{{ user.nickname }}{% endblock %}
 {% block content %}
 <div class="rank span11">
-    <h2>最新添加代码</h2>
-    <ul>{% for paste in new_pastes %}
+    <h2>{{ user.nickname }} 最新添加的代码</h2>
+    <ul>{% for paste in pastes %}
         <li><a href="{{ url_for('pasteapp.view', paste_id=paste.id) }}">{{ paste.title }}</a>{% for tag in paste.tags %}<a href="{{ url_for('tagapp.view', tag_name=tag.name) }}" class="btn small tag">{{ tag.name }}</a>{% endfor %}<span>{{ paste.created_time | dateformat }}<span></li>
         {% endfor %}</ul>
 </div>
 <div class="rank span11">
-    <h2>访问最多代码</h2>
-    <ul>{% for paste in top_pastes %}
+    <h2>{{ user.nickname }} 最新收藏的代码</h2>
+    <ul>{% for paste in user.favourites %}
         <li><a href="{{ url_for('pasteapp.view', paste_id=paste.id) }}">{{ paste.title }}</a>{% for tag in paste.tags %}<a href="{{ url_for('tagapp.view', tag_name=tag.name) }}" class="btn small tag">{{ tag.name }}</a>{% endfor %}<span>{{ paste.created_time | dateformat }}<span></li>
         {% endfor %}</ul>
 </div>
 <div class="row">
-    <div class="rank span6">
-        <h2>最活跃用户</h2>
-        <ul>{% for user in top_users %}
-            <li><a href="{{ url_for('userapp.view', user_id=user.id) }}">{{ user.nickname }}</a><span>{{ user.created_time | dateformat }}</span></li>
-            {% endfor %}</ul>
-    </div>
-    <div class="rank span5">
-        <h2>最受欢迎标签</h2>
-        {% for tag in top_tags %}
-            <a href="{{ url_for('tagapp.view', tag_name=tag.name) }}" class="btn small tag" style="margin-bottom:5px;">{{ tag.name }}</a>
-        {% endfor %}
-    </div>
 </div>
 {% endblock %}
